--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 #mainCalendar {
     display: flex;
     flex-direction: column;
-    width: 250px;
+    width: 240px;
     height: 350px;
     z-index: 1;
     user-select: none;
@@ -19,7 +19,7 @@ body {
 #header {
     color: #EDDDD4;
     background: #197278;
-    width: 250px;
+    width: inherit;
     height: 50px;
     display: flex;
     position: relative;
@@ -76,8 +76,16 @@ body {
     width: 150px;
     height: 24px;
 }
+.removeChangeButton {
+    display: flex;
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    
+    color: #283D3B;
+}
 #dayHeaderContainer {
-    width: 250px;
+    width: inherit;
     height: 35px;
     display: flex;
     margin: 0 auto;
@@ -133,10 +141,43 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+    box-shadow: inset 0 0 0 2px rgba(16, 118, 165, 0.397);
     height: calc(180px/6);
-    /* box-shadow:inset 0px 0px 0px 2px rgba(85, 85, 85, 0.219); */
+
+}
+.wholeMonthDiv {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    color:rgb(216, 216, 216);
+    width: 58px;
+    height: 53px;
+    border: 1px solid white;
+
+}
+.wholeMonthDiv:hover {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    box-shadow: inset 0 0 0 2px rgba(16, 118, 165, 0.397);
+    height: 55px;
 }
 
+.inWholeMonth {
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    right: 2px;
+    bottom: 2px;
+
+    background: white;
+    z-index: -10;
+}
 .focus {
     box-sizing: border-box;
     display: flex;
@@ -167,16 +208,13 @@ body {
 }
 
 
-.selected {
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    color: black;
-    background: #197278;
-}
-.selected > .inDay {
 
+.day:first-child  {
+width: 100%;
+height: 100%;
 }
+
+
 .outOfMonth {
     color:rgb(216, 216, 216);
 }
