--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 
     font-family: 'Nunito', sans-serif;
     display: flex;
-
+    /* justify-content: center; */
     position: relative;
     width: inherit;
     margin: 0 auto;
@@ -167,8 +167,35 @@ body {
     box-shadow: inset 0 0 0 2px rgba(16, 118, 165, 0.397);
     height: 55px;
 }
+.wholeYearDiv {
+    
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    color: rgba(206, 206, 206, 0.753);
+    border: 1px solid white;
+    /* box-shadow: inset 0 0 0 2px rgba(16, 118, 165, 0.397); */
+    height: 55px;
+}
+.wholeYearDiv:hover {
+    width: 48px;
+
+}
 
 .inWholeMonth {
+    position: absolute;
+    left: 2px;
+    top: 2px;
+    right: 2px;
+    bottom: 2px;
+
+    background: white;
+    z-index: -10;
+}
+.inWholeYear {
     position: absolute;
     left: 2px;
     top: 2px;
@@ -186,6 +213,33 @@ body {
     align-items: center;
     width: 100%;
     height: calc(180px/6);
+    border: 1px solid white;
+    box-shadow:inset 0px 0px 0px 2px #62b8bb;
+    
+    color: black;
+    outline: none;
+}
+.wholeDivFocus {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 58px;
+    height: 53px;
+    border: 1px solid white;
+    box-shadow:inset 0px 0px 0px 2px #62b8bb;
+    
+    color: black;
+    outline: none;
+}
+.wholeYearFocus {
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 55px;
     border: 1px solid white;
     box-shadow:inset 0px 0px 0px 2px #62b8bb;
     
